# collaboflow-rs

./: .gitignore  Cargo.toml  README.md  develop.env
.github/workflows/: publish.yml
src/: authorization.rs  client.rs  lib.rs  query.rs  record.rs  request.rs  response.rs
src/client/: document.rs  file.rs  form.rs  group.rs  mystatus.rs  query_params.rs  title.rs  user.rs
src/client/document/: document.rs  document_contents.rs  document_determs.rs  document_one.rs  documents.rs  documents_search.rs  documents_simulation_determs.rs
src/client/file/: files.rs
src/client/form/: form_parts.rs  form_settings_prints.rs  forms.rs
src/client/group/: group.rs  group_one.rs  groups.rs
src/client/mystatus/: mydeterms.rs  mydrafts.rs  myprocesses.rs  myrequests.rs
src/client/title/: title.rs  title_one.rs  titles.rs
src/client/user/: user.rs  user_one.rs  users.rs
src/record/: category.rs  document.rs  file.rs  form.rs  group.rs  title.rs  user.rs
src/request/: document.rs  group.rs  title.rs
src/request/document/: document_one.rs  documents.rs  documents_search.rs  documents_simulation_determs.rs
src/request/file/: files.rs
src/request/group/: group_one.rs  groups.rs
src/request/title/: title_one.rs  titles.rs
src/request/user/: user_one.rs  users.rs
src/response/: document.rs  error.rs  form.rs  group.rs  mystatus.rs  title.rs  user.rs
src/response/document/: document_contents.rs  document_determs.rs  document_one.rs  documents.rs  documents_search.rs  documents_simulation_determs.rs
src/response/file/: files.rs
src/response/form/: form_parts.rs  form_settings_prints.rs  forms.rs
src/response/group/: group_one.rs  groups.rs
src/response/mystatus/: mydeterms.rs  mydrafts.rs  myprocesses.rs  myrequests.rs
src/response/title/: title.rs  (+2 more)
tests/: document.rs  file.rs  form.rs  group.rs  mystatus.rs  query.rs  title.rs  user.rs  utils.rs
tests/common/: mod.rs
tests/sample_files/: test.txt
(+2 files in other folders)
