[package]
name = "collaboflow-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
reqwest = { version = "0.11.12", features = ["json"] }
tokio = { version = "1.21.2", features = ["full"] }
data-encoding = "2.3.2"
anyhow = "1.0.66"
dotenv = "0.15.0"
