[package]
authors = ["Kazuno Fukuda <codemountains@gmail.com>"]
description = "A Collaboflow REST API client for Rust language."
keywords = ["collaboflow"]
categories = ["web-programming::http-client"]
repository = "https://github.com/codemountains/collaboflow-rs"
edition = "2021"
license = "MIT"
readme = "README.md"
name = "collaboflow-rs"
version = "0.0.8"

[dependencies]
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
reqwest = { version = "0.11.12", features = ["json"] }
tokio = { version = "1.21.2", features = ["full"] }
data-encoding = "2.3.2"

[dev-dependencies]
anyhow = "1.0.66"
dotenv = "0.15.0"
ulid = "1.0.0"
