[package]
authors = ["Kazuno Fukuda <codemountains@gmail.com>"]
description = "A Collaboflow REST API client for Rust language."
keywords = ["collaboflow"]
categories = ["web-programming::http-client"]
repository = "https://github.com/codemountains/collaboflow-rs"
edition = "2021"
license = "MIT"
readme = "README.md"
name = "collaboflow-rs"
version = "1.0.0"

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
reqwest = { version = "0.12.7", default-features = false, features = ["json", "multipart", "rustls-tls"] }
tokio = { version = "1.40.0", features = ["full"] }
data-encoding = "2.6.0"
bytes = "1.7.2"

[dev-dependencies]
anyhow = "1.0.89"
dotenv = "0.15.0"
ulid = "1.1.3"
